--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,5 +4,6 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=root
 
+spring.jpa.open-in-view=false
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create-drop
